# gameboy-emulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: deploy.yml
include/: bus.h  cart.h  core.h  cpu.h  debug.h  debugwindow.h  definitions.h  emulatorapp.h  gobby.h  instructionviewerwidget.h  interrupt.h  joypad.h  main.h  mainwindow.h  mbc.h  memory.h  mmu.h  oamviewerwidget.h  ppu.h  register.h  renderer.h  rendererwidget.h  serial.h  system.h  tilemapviewerwidget.h  timer.h
include/cart/: cart.h  imbc.h  mbc.h
include/cpu/: cpu.h  instruction.h  interrupt.h  register.h
include/memory/: bus.h  cart.h  mmu.h
include/ppu/: obj.h  ppu.h  ppumode.h
include/ui/: debugwidget.h  debugwindow.h  framelistener.h  mainwindow.h  oamviewerwidget.h  rendererwidget.h  tilemapviewerwidget.h
src/: bus.cpp  cart.cpp  core.cpp  cpu.cpp  debug.cpp  debugwindow.cpp  emulatorapp.cpp  gobby.cpp  instructionviewerwidget.cpp  interrupt.cpp  joypad.cpp  main.cpp  mainwindow.cpp  mmu.cpp  oamviewerwidget.cpp  ppu.cpp  register.cpp  renderer.cpp  rendererwidget.cpp  serial.cpp  tilemapviewerwidget.cpp  timer.cpp
src/cart/: cart.cpp  mbc1.cpp
src/cpu/: cpu.cpp  instruction.cpp  interrupt.cpp  register.cpp
src/memory/: bus.cpp  cart.cpp  mmu.cpp
src/ppu/: ppu.cpp
src/ui/: debugwidget.cpp  debugwindow.cpp  mainwindow.cpp  oamviewerwidget.cpp  rendererwidget.cpp  tilemapviewerwidget.cpp
